--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -375,7 +375,7 @@
 // Design
 .design {
   --height-design: 650px;
-  background-image: url(/img/design.jpg);
+  background-image: url(../img/design.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
